feat: add feature products crud
